[package]
name = "digest_2"
version = "0.0.0"

[workspace]
members = [
    "digest"
]

[dependencies]
typenum = { path = "./typenum", default-features = false }
blobby = { path = "./blobby", default-features = false }
generic-array = { path = "./generic-array", default-features = false }
digest = { path = "./digest", default-features = false }

byteorder = { path = "./byteorder" , default-features = false }

sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

